syntax = "proto3";
package com.antigravity;

option java_package = "com.antigravity.proto";
option java_multiple_files = true;
option java_outer_classname = "AudioConfigProto";

message AudioConfig {
  string type = 1; // "preset" or "tts"
  string url = 2;
  string text = 3;
}
